pkg/temql/y.output

state 0
	$accept: .start $end 

	START_METRIC  shift 2
	START_EXPRESSION  shift 3
	.  error

	start  goto 1

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  START_METRIC.metric 
	label_set: .    (9)

	LEFT_BRACE  shift 6
	.  reduce 9 (src line 83)

	label_set  goto 5
	metric  goto 4

state 3
	start:  START_EXPRESSION.expr 
	vector_selector: .    (35)

	LEFT_PAREN  shift 11
	LEFT_BRACE  shift 13
	IDENTIFIER  shift 12
	.  reduce 35 (src line 192)

	expr  goto 7
	term_identifier  goto 9
	label_matchers  goto 10
	vector_selector  goto 8

state 4
	start:  START_METRIC metric.    (1)

	.  reduce 1 (src line 56)


state 5
	metric:  label_set.    (5)

	.  reduce 5 (src line 71)


state 6
	label_set:  LEFT_BRACE.label_set_list RIGHT_BRACE 
	label_set:  LEFT_BRACE.label_set_list COMMA RIGHT_BRACE 
	label_set:  LEFT_BRACE.RIGHT_BRACE 

	error  shift 18
	RIGHT_BRACE  shift 15
	IDENTIFIER  shift 17
	.  error

	label_set_list  goto 14
	label_set_item  goto 16

state 7
	start:  START_EXPRESSION expr.    (2)

	.  reduce 2 (src line 59)


state 8
	expr:  vector_selector.    (3)

	.  reduce 3 (src line 63)


state 9
	vector_selector:  term_identifier.label_matchers 
	vector_selector:  term_identifier.    (33)

	LEFT_BRACE  shift 13
	.  reduce 33 (src line 179)

	label_matchers  goto 19

state 10
	vector_selector:  label_matchers.    (34)

	.  reduce 34 (src line 188)


state 11
	term_identifier:  LEFT_PAREN.term_expr RIGHT_PAREN 

	LEFT_PAREN  shift 22
	IDENTIFIER  shift 21
	.  error

	term_expr  goto 20

state 12
	term_identifier:  IDENTIFIER.    (18)

	.  reduce 18 (src line 112)


state 13
	label_matchers:  LEFT_BRACE.label_match_list RIGHT_BRACE 

	error  shift 26
	IDENTIFIER  shift 25
	.  error

	label_match_list  goto 23
	label_matcher  goto 24

state 14
	label_set:  LEFT_BRACE label_set_list.RIGHT_BRACE 
	label_set:  LEFT_BRACE label_set_list.COMMA RIGHT_BRACE 
	label_set_list:  label_set_list.COMMA label_set_item 
	label_set_list:  label_set_list.error 

	error  shift 29
	RIGHT_BRACE  shift 27
	COMMA  shift 28
	.  error


state 15
	label_set:  LEFT_BRACE RIGHT_BRACE.    (8)

	.  reduce 8 (src line 81)


state 16
	label_set_list:  label_set_item.    (11)

	.  reduce 11 (src line 89)


state 17
	label_set_item:  IDENTIFIER.EQL STRING 
	label_set_item:  IDENTIFIER.EQL error 
	label_set_item:  IDENTIFIER.error 

	error  shift 31
	EQL  shift 30
	.  error


state 18
	label_set_item:  error.    (16)

	.  reduce 16 (src line 102)


state 19
	vector_selector:  term_identifier label_matchers.    (32)

	.  reduce 32 (src line 173)


state 20
	term_identifier:  LEFT_PAREN term_expr.RIGHT_PAREN 
	term_expr:  term_expr.LAND term_expr 
	term_expr:  term_expr.LOR term_expr 

	RIGHT_PAREN  shift 32
	LAND  shift 33
	LOR  shift 34
	.  error


state 21
	term_expr:  IDENTIFIER.    (19)

	.  reduce 19 (src line 118)


state 22
	term_expr:  LEFT_PAREN.term_expr LAND term_expr RIGHT_PAREN 
	term_expr:  LEFT_PAREN.term_expr LOR term_expr RIGHT_PAREN 

	LEFT_PAREN  shift 22
	IDENTIFIER  shift 21
	.  error

	term_expr  goto 35

state 23
	label_matchers:  LEFT_BRACE label_match_list.RIGHT_BRACE 
	label_match_list:  label_match_list.COMMA label_matcher 
	label_match_list:  label_match_list.error 

	error  shift 38
	RIGHT_BRACE  shift 36
	COMMA  shift 37
	.  error


state 24
	label_match_list:  label_matcher.    (26)

	.  reduce 26 (src line 157)


state 25
	label_matcher:  IDENTIFIER.match_op STRING 
	label_matcher:  IDENTIFIER.match_op error 
	label_matcher:  IDENTIFIER.error 

	error  shift 40
	EQL  shift 41
	.  error

	match_op  goto 39

state 26
	label_matcher:  error.    (31)

	.  reduce 31 (src line 169)


state 27
	label_set:  LEFT_BRACE label_set_list RIGHT_BRACE.    (6)

	.  reduce 6 (src line 77)


state 28
	label_set:  LEFT_BRACE label_set_list COMMA.RIGHT_BRACE 
	label_set_list:  label_set_list COMMA.label_set_item 

	error  shift 18
	RIGHT_BRACE  shift 42
	IDENTIFIER  shift 17
	.  error

	label_set_item  goto 43

state 29
	label_set_list:  label_set_list error.    (12)

	.  reduce 12 (src line 91)


state 30
	label_set_item:  IDENTIFIER EQL.STRING 
	label_set_item:  IDENTIFIER EQL.error 

	error  shift 45
	STRING  shift 44
	.  error


state 31
	label_set_item:  IDENTIFIER error.    (15)

	.  reduce 15 (src line 100)


state 32
	term_identifier:  LEFT_PAREN term_expr RIGHT_PAREN.    (17)

	.  reduce 17 (src line 108)


state 33
	term_expr:  term_expr LAND.term_expr 

	LEFT_PAREN  shift 22
	IDENTIFIER  shift 21
	.  error

	term_expr  goto 46

state 34
	term_expr:  term_expr LOR.term_expr 

	LEFT_PAREN  shift 22
	IDENTIFIER  shift 21
	.  error

	term_expr  goto 47

state 35
	term_expr:  LEFT_PAREN term_expr.LAND term_expr RIGHT_PAREN 
	term_expr:  LEFT_PAREN term_expr.LOR term_expr RIGHT_PAREN 
	term_expr:  term_expr.LAND term_expr 
	term_expr:  term_expr.LOR term_expr 

	LAND  shift 48
	LOR  shift 49
	.  error


state 36
	label_matchers:  LEFT_BRACE label_match_list RIGHT_BRACE.    (24)

	.  reduce 24 (src line 141)


state 37
	label_match_list:  label_match_list COMMA.label_matcher 

	error  shift 26
	IDENTIFIER  shift 25
	.  error

	label_matcher  goto 50

state 38
	label_match_list:  label_match_list error.    (27)

	.  reduce 27 (src line 159)


state 39
	label_matcher:  IDENTIFIER match_op.STRING 
	label_matcher:  IDENTIFIER match_op.error 

	error  shift 52
	STRING  shift 51
	.  error


state 40
	label_matcher:  IDENTIFIER error.    (30)

	.  reduce 30 (src line 167)


state 41
	match_op:  EQL.    (4)

	.  reduce 4 (src line 68)


state 42
	label_set:  LEFT_BRACE label_set_list COMMA RIGHT_BRACE.    (7)

	.  reduce 7 (src line 79)


state 43
	label_set_list:  label_set_list COMMA label_set_item.    (10)

	.  reduce 10 (src line 87)


state 44
	label_set_item:  IDENTIFIER EQL STRING.    (13)

	.  reduce 13 (src line 96)


state 45
	label_set_item:  IDENTIFIER EQL error.    (14)

	.  reduce 14 (src line 98)


state 46
	term_expr:  term_expr.LAND term_expr 
	term_expr:  term_expr LAND term_expr.    (22)
	term_expr:  term_expr.LOR term_expr 

	.  reduce 22 (src line 130)


state 47
	term_expr:  term_expr.LAND term_expr 
	term_expr:  term_expr.LOR term_expr 
	term_expr:  term_expr LOR term_expr.    (23)

	LAND  shift 33
	.  reduce 23 (src line 134)


state 48
	term_expr:  LEFT_PAREN term_expr LAND.term_expr RIGHT_PAREN 
	term_expr:  term_expr LAND.term_expr 

	LEFT_PAREN  shift 22
	IDENTIFIER  shift 21
	.  error

	term_expr  goto 53

state 49
	term_expr:  LEFT_PAREN term_expr LOR.term_expr RIGHT_PAREN 
	term_expr:  term_expr LOR.term_expr 

	LEFT_PAREN  shift 22
	IDENTIFIER  shift 21
	.  error

	term_expr  goto 54

state 50
	label_match_list:  label_match_list COMMA label_matcher.    (25)

	.  reduce 25 (src line 149)


state 51
	label_matcher:  IDENTIFIER match_op STRING.    (28)

	.  reduce 28 (src line 163)


state 52
	label_matcher:  IDENTIFIER match_op error.    (29)

	.  reduce 29 (src line 165)


state 53
	term_expr:  LEFT_PAREN term_expr LAND term_expr.RIGHT_PAREN 
	term_expr:  term_expr.LAND term_expr 
	term_expr:  term_expr LAND term_expr.    (22)
	term_expr:  term_expr.LOR term_expr 

	RIGHT_PAREN  shift 55
	.  reduce 22 (src line 130)


state 54
	term_expr:  LEFT_PAREN term_expr LOR term_expr.RIGHT_PAREN 
	term_expr:  term_expr.LAND term_expr 
	term_expr:  term_expr.LOR term_expr 
	term_expr:  term_expr LOR term_expr.    (23)

	RIGHT_PAREN  shift 56
	LAND  shift 33
	.  reduce 23 (src line 134)


state 55
	term_expr:  LEFT_PAREN term_expr LAND term_expr RIGHT_PAREN.    (20)

	.  reduce 20 (src line 122)


state 56
	term_expr:  LEFT_PAREN term_expr LOR term_expr RIGHT_PAREN.    (21)

	.  reduce 21 (src line 126)


18 terminals, 14 nonterminals
36 grammar rules, 57/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
63 working sets used
memory: parser 20/240000
0 extra closures
52 shift entries, 1 exceptions
21 goto entries
0 entries saved by goto default
Optimizer space used: output 61/240000
61 table entries, 0 zero
maximum spread: 16, maximum offset: 49
